yaml/ka-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ka-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /taiwanese_song_service
          backend:
            serviceName: taiwanese-song-service
            servicePort: 8000
        - path: /chinese_song_service
          backend:
            serviceName: chinese-song-service
            servicePort: 8000
        - path: /chinese_popular_song_service
          backend:
            serviceName: chinese-popular-song-service
            servicePort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: taiwanese-song-service
  labels:
    app: taiwanese-song-service
spec:
  ports:
    - port: 8000
  selector:
    app: taiwanese-song-pod

---
apiVersion: v1
kind: Service
metadata:
  name: chinese-song-service
  labels:
    app: chinese-song-service
spec:
  ports:
    - port: 8000
  selector:
    app: chinese-song-pod


---
apiVersion: v1
kind: Service
metadata:
  name: chinese-popular-song-service
  labels:
    app: chinese-popular-song-service
spec:
  ports:
    - port: 8000
  selector:
    app: chinese-popular-song-pod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiwanese-song-deployment
  labels:
    app: taiwanese-song-deployment
spec:
  selector:
    matchLabels:
      app: taiwanese-song-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: taiwanese-song-pod
    spec:
      containers:
      - image: joejoe2/taiwanese_song_servic-
        name: taiwanese-song
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: ka-persistent-storage
          mountPath: /app/db/
      volumes:
      - name: ka-persistent-storage
        persistentVolumeClaim:
          claimName: ka-pv-claim

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chinese-song-deployment
  labels:
    app: chinese-song-deployment
spec:
  selector:
    matchLabels:
      app: chinese-song-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: chinese-song-pod
    spec:
      containers:
      - image: joejoe2/chinese_song_service
        name: chinese-song
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: ka-persistent-storage
          mountPath: /app/db/
      volumes:
      - name: ka-persistent-storage
        persistentVolumeClaim:
          claimName: ka-pv-claim


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chinese-popular-song-deployment
  labels:
    app: chinese-popular-song-deployment
spec:
  selector:
    matchLabels:
      app: chinese-popular-song-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: chinese-popular-song-pod
    spec:
      containers:
      - image: joejoe2/chinese_popular_song_service
        name: chinese-popular-song
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: ka-persistent-storage
          mountPath: /app/db/
      volumes:
      - name: ka-persistent-storage
        persistentVolumeClaim:
          claimName: ka-pv-claim
